# cpm

./: .gitignore  Program.cs  ProjectConfigManager.cs  README.md  Utils.cs  compile.sh  cpm  install.py  install.sh  requirements.txt
.github/workflows/: build.yml
Commands/: BuildCommand.cs  CleanCommand.cs  CreateCommand.cs  DependenciesCommand.cs  EmbedCommand.cs  InfoCommand.cs  NewClassCommand.cs  NewCommand.cs  NewHeaderCommand.cs  NewSourceCommand.cs  NewStructCommand.cs  ProjectCommand.cs  RootCommand.cs  RunCommand.cs  ScriptsCommand.cs  StartCommand.cs  StatsCommand.cs  TestCommand.cs  TreeCommand.cs
Models/: Dependency.cs  ProjectConfig.cs  ProjectSection.cs  ResourcesSection.cs
cpm_dotnet/: Program.cs  ProjectConfigManager.cs  Utils.cs  cpm_dotnet.csproj
cpm_dotnet/Commands/: BuildCommand.cs  CleanCommand.cs  CreateCommand.cs  EmbedCommand.cs  NewClassCommand.cs  NewCommand.cs  NewCommandSettings.cs  NewHeaderCommand.cs  NewSourceCommand.cs  NewStructCommand.cs  RootCommand.cs  RunCommand.cs  TestCommand.cs
cpm_dotnet/Models/: Dependency.cs  ProjectConfig.cs  ProjectSection.cs  ResourcesSection.cs
cpm_dotnet/cpm/cpm_dotnet.dSYM/Contents/: Info.plist
cpm_dotnet/newtest/: package.toml
cpm_dotnet/test_pr/: CMakeLists.txt  package.toml
cpm_dotnet/test_pr/.cache/clangd/index/: embedded_resources.cpp.AA7A8DC113715347.idx  embedded_resources.h.46164FBDF794F6D3.idx  main.cpp.858FC2648BBACD8F.idx  main.cpp.B07F110DD25B8415.idx
cpm_dotnet/test_pr/src/: embedded_resources.h  main.cpp
my_new_project/: CMakeLists.txt  package.toml
(+1 files in other folders)
